Add requests/tasks endpoint to allow checking status
